--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>KimProject</title>
   <style>
     body {
-        padding: 100px;
+        padding: 0px;
         background: whitesmoke;
     }
     button.animate {
@@ -18,13 +18,12 @@
     button  {
         position: relative;
         border: none;
-        display: inline-block;
         padding: 15px 30px;
         border-radius: 10px;
-        font-family: "paybooc-Light", sans-serif;
-        text-decoration: none;
+        font-family: "Nanum Gothic Coding", monospace;
         font-weight: 600;
-        width: 9%;
+        text-decoration: none;
+        text-align:center;
         background-color: #e1eef6;
         color: black;
     }
@@ -68,6 +67,7 @@
     height: 50px;
     background-color: #ff5f2e;
     color: #e1eef6;
+    margin:1px;
     }
     .w-btn:hover {
     letter-spacing: 1px;
@@ -82,9 +82,8 @@
         font-family: "Nanum Gothic Coding", monospace;
         font-weight: 400;
         font-style: normal;
-        font-size: 20pt;
-        width: 80%;
-        height: 200px;
+        font-size: 15pt;
+        height: 350px;
         text-align: center;
     }
 
@@ -117,7 +116,7 @@
       value="1"
       min="0"
       max="4"
-    ></progress>
+    ></progress><br>
   <form id="multiStepForm">
     <!-- Step 1 -->
     <div class="form-step active">
@@ -139,8 +138,8 @@
       <button type="button" class="w-btn" id="option">option2-1</button>
       <button type="button" class="w-btn" id="option">option2-2</button><br>
       
-      <button type="button" id="prevStep">Previous</button>
-      <button type="button" id="nextStep">Next</button>
+      <button type="button" id="prevStep">이전</button>
+      <button type="button" id="nextStep">다음</button>
     </div>
 
     <!-- Step 3 -->
@@ -152,8 +151,8 @@
       <button type="button" class="w-btn" id="option">option3-1</button>
       <button type="button" class="w-btn" id="option">option3-2</button><br>
 
-      <button type="button" id="prevStep">Previous</button>
-      <button type="button" id="nextStep">Next</button>
+      <button type="button" id="prevStep">이전</button>
+      <button type="button" id="nextStep">다음</button>
     </div>
   </form>
 
@@ -166,7 +165,7 @@
     <button type="button" class="w-btn" id="option">option4-1</button>
     <button type="button" class="w-btn" id="option">option4-2</button><br>
 
-    <button type="button" id="prevStep">Previous</button>
+    <button type="button" id="prevStep">이전</button>
     <button type="submit">Submit</button>
   </div>
 </form>
