--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </div>
   <br>
   <form id="multiStepForm">
-    <h2 className="text-2xl font-bold text-center mb-8 text-indigo-600" style="text-align: center">
+    <h2 className="text-2xl font-bold text-center mb-8 text-indigo-600" style="text-align: center; margin:0px">
       나와 닮은 의학자는 누구일까요? 🔬
     </h2>
     <div class="form-step active">
