--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     text-decoration: none;
     text-align: center;
     font-weight: 600;
+    font-size: 10pt;
     transition: 0.25s;
     width: 80%;
     height: 60px;
@@ -137,7 +138,7 @@
   </div>
   <br>
   <form id="multiStepForm">
-    <h2 className="text-2xl font-bold text-center mb-8 text-indigo-600" style="text-align: center; margin:0px">
+    <h2 className="text-2xl font-bold text-center mb-8 text-indigo-600" style="text-align: center; margin:1px">
       나와 닮은 의학자는 누구일까요? 🔬
     </h2>
     <div class="form-step active">
@@ -176,7 +177,7 @@
       <div id="text-area" style="font-size:13pt">무엇을 하고 싶나요?</div>
       <img class="cimg" src="./images/q3.png">
       
-      <button type="button" class="w-btn" id="option">옛날부터 지금까지 사용했던 의료기구들을 자세히 관찰하고 직접 체험해보고 싶어요!"</button>
+      <button type="button" class="w-btn" id="option">옛날부터 지금까지 사용했던 의료기구들을 자세히 관찰하고 직접 체험해보고 싶어요!</button>
       <button type="button" class="w-btn" id="option2">재미있는 의학 이야기를 많이 배워서 친구들에게도 알려주고 함께 이야기 나누고 싶어요!</button><br>
 
       <div id="form-step-buttons">
