--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         font-weight: 400;
         font-style: normal;
         font-size: 9pt;
-        height: 30px;
+        height: auto;
         text-align: center;
     }
 
